assets/main.css
@tailwind base;
@import './base.css';

@tailwind components;
@import './components.css';

@tailwind utilities;

.swiper-button-next {
  color: white !important;
  background: rgba(0, 0, 0, 0.2);
  width: 50px !important;
  height: 50px !important;
  line-height: 50px;
  border-radius: 25px;
  font-size: 28px;
  text-align: center;
  transition: background 0.45s cubic-bezier(0.22, 0.61, 0.35, 1);
}

.mySwiper {
  z-index: 0 !important;
}

#search-input {
  margin-top: 0px;
}

.filter-input {
  display: none;
}
.swiper-button-next::after {
  font-size: 25px !important;
}

.swiper-button-prev::after {
  font-size: 25px !important;
}

.swiper-button-prev {
  color: white !important;
  background: rgba(0, 0, 0, 0.2);
  width: 50px !important;
  height: 50px !important;
  line-height: 50px;
  border-radius: 25px;
  font-size: 28px;
  text-align: center;
  transition: background 0.45s cubic-bezier(0.22, 0.61, 0.35, 1);
}

.swiper {
  width: 100%;
  height: 100%;
}

.swiper-slide {
  text-align: center;
  font-size: 18px;
  background: #fff;

  /* Center slide text vertically */
  display: -webkit-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  align-items: center;
}

@media screen and (min-width: 768px) {
  .swiper-slide img {
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover;
  }
}

.max-panel {
  max-height: 250px;
  overflow-y: auto;
  overflow-x: hidden;
}
.max-panel::-webkit-scrollbar {
  width: 6px;
}

.max-panel::-webkit-scrollbar-track {
  background: #fff;
  opacity: 1;
}

.max-panel::-webkit-scrollbar-thumb {
  background: #d3d3d36e !important;
  width: 6px;
  border-radius: 6px;
}
#payment-form {
  width: 30vw;
  min-width: 500px;
  align-self: center;
  box-shadow: 0px 0px 0px 0.5px rgba(50, 50, 93, 0.1),
    0px 2px 5px 0px rgba(50, 50, 93, 0.1), 0px 1px 1.5px 0px rgba(0, 0, 0, 0.07);
  border-radius: 7px;
  padding: 40px;
}

#payment-message {
  color: rgb(105, 115, 134);
  font-size: 16px;
  line-height: 20px;
  padding-top: 12px;
  text-align: center;
}

#payment-element {
  margin-bottom: 24px;
}

/* Buttons and links */
#payment-submit {
  background: #5469d4;
  font-family: Arial, sans-serif;
  color: #ffffff;
  border-radius: 4px;
  border: 0;
  padding: 12px 16px;
  font-size: 16px;
  font-weight: 600;
  cursor: pointer;
  display: block;
  transition: all 0.2s ease;
  box-shadow: 0px 4px 5.5px 0px rgba(0, 0, 0, 0.07);
  width: 100%;
}

#payment-submit:hover {
  filter: contrast(115%);
}

#payment-submit:disabled {
  opacity: 0.5;
  cursor: default;
}

/* stripe-spinner/processing state, errors */
.stripe-spinner,
.stripe-spinner:before,
.stripe-spinner:after {
  border-radius: 50%;
}

.stripe-spinner {
  color: #ffffff;
  font-size: 22px;
  text-indent: -99999px;
  margin: 0px auto;
  position: relative;
  width: 20px;
  height: 20px;
  box-shadow: inset 0 0 0 2px;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
}

.stripe-spinner:before,
.stripe-spinner:after {
  position: absolute;
  content: '';
}

.stripe-spinner:before {
  width: 10.4px;
  height: 20.4px;
  background: #5469d4;
  border-radius: 20.4px 0 0 20.4px;
  top: -0.2px;
  left: -0.2px;
  -webkit-transform-origin: 10.4px 10.2px;
  transform-origin: 10.4px 10.2px;
  -webkit-animation: loading 2s infinite ease 1.5s;
  animation: loading 2s infinite ease 1.5s;
}

.stripe-spinner:after {
  width: 10.4px;
  height: 10.2px;
  background: #5469d4;
  border-radius: 0 10.2px 10.2px 0;
  top: -0.1px;
  left: 10.2px;
  -webkit-transform-origin: 0px 10.2px;
  transform-origin: 0px 10.2px;
  -webkit-animation: loading 2s infinite ease;
  animation: loading 2s infinite ease;
}

@keyframes loading {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@media only screen and (max-width: 600px) {
  #payment-form {
    width: 80vw;
    min-width: initial;
  }
}

.line-clip-2 {
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 2;
  max-height: 42px;
  min-height: 42px !important;
}

.line-clip-7 {
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 7;
  max-height: 210px;
}

.image-container {
  width: 100%;
  max-width: 100%;
}

.image-container > div,
.image-container > span {
  position: unset !important;
}

.image-container .image {
  object-fit: cover !important;
  width: 100% !important;
  position: relative !important;
  object-position: top !important;
}
.sm\:h-64 {
  height: 16rem !important;
}

.sm\:h-72 {
  height: 18rem !important;
}

.sm\:min-h-screen {
  min-height: 100vh !important;
}

